# bulgarian-appliance-price-scraper

./: .gitignore  CHANGELOG.md  Makefile  README.md  config.toml  pyproject.toml  requirements.txt  run_all_appliance_types.sh
examples/mcp/: README.md  mcp_servers.example.json
skills/technobulgarian-scraper/: SKILL.md
src/bulgarian_appliance_price_scraper/: compare.py  mcp_server.py  scraper.py
src/technobulgarian_scraper/: compare.py  mcp_server.py  scraper.py
src/technomarket_appliance_scraper/: __init__.py
src/technomarket_fridge_scraper/: __init__.py  cache.py  comparison.py  config.py  details.py  discovery.py  models.py  normalization.py  parser.py  render.py  scraper.py
src/technomarket_fridge_scraper/stores/: __init__.py  technomarket.py  technopolis.py  zora.py
src/technomarket_scraper/: __init__.py
tests/: test_cache_seed.py  test_comparison.py  test_config.py  test_details.py  test_discovery.py  test_live_scrape_smoke.py  test_markdown_output.py  test_mcp_server.py  test_normalization.py  test_parser.py  test_scraper_discovery.py  test_technopolis.py  test_zora.py
