[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "technobulgarian-scraper"
version = "0.1.0"
description = "Scrape Bulgarian appliance listings from Technomarket, Technopolis, and Zora"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12,<5",
  "requests>=2.31,<3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
