[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bulgarian-appliance-price-scraper"
version = "0.1.0"
description = "Scrape Bulgarian appliance listings from Technomarket, Technopolis, and Zora"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12,<5",
  "mcp>=1.0,<2",
  "requests>=2.31,<3",
]

[project.scripts]
bulgarian-appliance-price-scraper = "bulgarian_appliance_price_scraper.scraper:main"
bulgarian-appliance-price-scraper-compare = "bulgarian_appliance_price_scraper.compare:main"
bulgarian-appliance-price-scraper-mcp = "bulgarian_appliance_price_scraper.mcp_server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
